--- a/source/index.html
+++ b/source/index.html
@@ -16,68 +16,83 @@
     </div>
     <nav class="page-header__main-menu main-menu ">
       <ul class="main-menu__list">
-        <li class="main-menu__item"><a class="main-menu__link" href="index.html">Главная</a></li>
-        <li class="main-menu__item main-menu__item--current"><a class="main-menu__link">Каталог продукции</a></li>
+        <li class="main-menu__item main-menu__item--current"><a class="main-menu__link">Главная</a></li>
+        <li class="main-menu__item "><a class="main-menu__link" href="catalog.html">Каталог продукции</a></li>
         <li class="main-menu__item"><a class="main-menu__link" href="form.html">Подбор программы</a></li>
       </ul>
     </nav>
   </header>
   <main class="page-main site-grid__wrapper">
-    <section class="page-main__promo promo">
-      <h1 class="promo__title">Функциональное питание для котов</h1>
-      <b class="promo__slogan">Занялся собой? Займись котом!</b>
-      <img class="promo__image" src="img/index-can-mobile@1x.png" width="280" height="271" alt="Cat energy pro из курицы">
-      <a class="promo__button button" href="#">Подобрать программу</a>
-    </section>
+    <div class="page-main__wrapper">
+      <section class="page-main__promo promo">
+        <h1 class="promo__title">Функциональное питание для котов</h1>
+        <b class="promo__slogan">Занялся собой? Займись котом!</b>
+        <img class="promo__image" src="img/index-can-mobile@1x.png" width="280" height="271" alt="Cat energy pro из курицы">
+        <a class="promo__button button" href="#">Подобрать программу</a>
+      </section>
+    </div>
+    <div class="page-main__wrapper">
+      <section class="page-main__categories categories">
+        <h2 class="categories__title visually-hidden">Категории</h2>
+        <section class="categories__item categories-item categories-slim">
+          <h3 class="categories-item__title categories-slim__image">Похудение</h3>
+          <p class="categories-item__about">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a class="categories-item__button categories-button" href="#">Каталог Slim</a>
+        </section>
+        <section class="categories__item categories-item categories-item--max-padding categories-pro">
+          <h3 class="categories-item__title categories-pro__image">Набор массы</h3>
+          <p class="categories-item__about">Заработать авторитет среди дворовых котов и даже собак?
+          Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+          <a class="categories-item__button categories-button" href="#">Каталог pro</a>
+        </section>
+      </section>
+    </div>
+    <div class="page-main__wrapper">
+      <section class="page-main__advantages advantages">
+        <h2 class="advantages__title">Как это работает</h2>
+        <ul class="advantages__list advantages-list">
+          <li class="advantages-list__item advantages-list__item--first-item-bg"><span class="advantages-list__first-item-img">Функциональное питание содержит только полезные питательные вещества.</span></li>
+          <li class="advantages-list__item advantages-list__item--second-item-bg"><span class="advantages-list__second-item-img">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</span></li>
+          <li class="advantages-list__item advantages-list__item--third-item-bg advantages-list__item--no-margin"><span class="advantages-list__third-item-img">Замените один-два приема обычной еды на наше функциональное питание.</span></li>
+          <li class="advantages-list__item advantages-list__item--fourth-item-bg advantages-list__item--no-margin"><span class="advantages-list__fourth-item-img">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</span></li>
+        </ul>
+      </section>
+    </div>
 
-    <section class="page-main__categories categories">
-      <h2 class="categories__title visually-hidden">Категории</h2>
-      <section class="categories__item categories-item categories-slim">
-        <h3 class="categories-item__title categories-slim__image">Похудение</h3>
-        <p class="categories-item__about">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-        <a class="categories-item__button categories-button" href="#">Каталог Slim</a>
-      </section>
-      <section class="categories__item categories-item categories-item--max-padding categories-pro">
-        <h3 class="categories-item__title categories-pro__image">Набор массы</h3>
-        <p class="categories-item__about">Заработать авторитет среди дворовых котов и даже собак?
-        Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-        <a class="categories-item__button categories-button" href="#">Каталог pro</a>
-      </section>
-    </section>
-    <section class="page-main__advantages advantages">
-      <h2 class="advantages__title">Как это работает</h2>
-      <ul class="advantages__list advantages-list">
-        <li class="advantages-list__item advantages-list__item--first-item-bg"><span class="advantages-list__first-item-img">Функциональное питание содержит только полезные питательные вещества.</span></li>
-        <li class="advantages-list__item advantages-list__item--second-item-bg"><span class="advantages-list__second-item-img">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</span></li>
-        <li class="advantages-list__item advantages-list__item--third-item-bg advantages-list__item--no-margin"><span class="advantages-list__third-item-img">Замените один-два приема обычной еды на наше функциональное питание.</span></li>
-        <li class="advantages-list__item advantages-list__item--fourth-item-bg advantages-list__item--no-margin"><span class="advantages-list__fourth-item-img">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</span></li>
-      </ul>
-    </section>
     <section class="page-main__example example">
-      <div class="example__wrapper">
-        <h2 class="example__title">Живой пример</h2>
-        <p class="example__about">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-        <div class="example__progress progress">
-          <p class="progress__value">5 кг <span class="progress__type">снижение  веса</span></p>
-          <p class="progress__value">60 дней <span class="progress__type">затрачено  времени</span></p>
+      <div class="page-main__wrapper">
+        <div class="example__wrapper">
+          <h2 class="example__title">Живой пример</h2>
+          <p class="example__about">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+          <div class="example__progress progress">
+            <p class="progress__value">5 кг <span class="progress__type">снижение  веса</span></p>
+            <p class="progress__value">60 дней <span class="progress__type">затрачено  времени</span></p>
+          </div>
+          <p class="example__expenses">Затраты на питание: 15 000 руб.</p>
         </div>
-        <p class="example__expenses">Затраты на питание: 15 000 руб.</p>
       </div>
       <div class="example__slider slider">
-        <img class="slider__image slider__image--current" src="img/before-mobile@1x.png" width="320" height="240" alt="Кот до правильного питания">
-        <img class="slider__image visually-hidden" src="img/after-mobile@1x.png" width="251" height="240" alt="Кот после правильного питания">
-        <div class="slider__buttons">
-          <button class="slider__button">Было</button>
-          <div class="slider__toggle"></div>
-          <button class="slider__button">Стало</button>
+        <div class="slider__images">
+          <img class="slider__image slider__image--current" src="img/before-mobile@1x.png" width="320" height="240" alt="Кот до правильного питания">
+          <img class="slider__image visually-hidden" src="img/after-mobile@1x.png" width="251" height="240" alt="Кот после правильного питания">
+        </div>
+        <div class="page-main__wrapper">
+          <div class="slider__buttons">
+            <button class="slider__button">Было</button>
+            <div class="slider__toggle"></div>
+            <button class="slider__button">Стало</button>
+          </div>
         </div>
       </div>
     </section>
+
     <section class="page-main__contacts contacts">
       <h2 class="contacts__title visually-hidden">Контакты</h2>
-      <div class="contacts__wrapper">
-        <p class="contacts__slogan">приглашаем к сотрудничеству дилеров!</p>
-        <p class="contacts__content">ул. Большая Конюшенная, д. 19/8  Санкт-Петербург</p>
+      <div class="page-main__wrapper">
+        <div class="contacts__wrapper">
+          <p class="contacts__slogan">приглашаем к сотрудничеству дилеров!</p>
+          <p class="contacts__content">ул. Большая Конюшенная, д. 19/8  Санкт-Петербург</p>
+        </div>
       </div>
       <iframe class="contacts__map" src="https://yandex.ru/map-widget/v1/-/CCuL4L9i" width="1345" height="645"></iframe>
     </section>
