--- a/source/catalog.html
+++ b/source/catalog.html
@@ -130,7 +130,7 @@
           </section>
         </div>
 
-        <div class="page-main__product">
+        <div class="page-main__product page-main__product--no-margin">
           <section class="product">
             <div class="product__content">
               <img class="product__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка гречневой каши Cat energy slim, 500г.">
@@ -156,7 +156,7 @@
           </section>
         </div>
 
-        <div class="page-main__product">
+        <div class="page-main__product page-main__product--no-margin">
           <section class="product">
             <div class="product__content">
               <img class="product__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка гречневой каши Cat energy slim, 1000г.">
@@ -220,156 +220,168 @@
     </div>
 
     <div class="page-main__extra-products extra-products">
-     <div class="page-main__wrapper">
-      <h2 class="extra-products__title">Дополнительные товары</h2>
-      <div class="page-main__extra-product">
-        <section class="extra-product extra-product--border-top">
-          <div class="extra-product__content">
-            <h3 class="extra-product__title">Сахарозаменитель</h3>
-            <table class="extra-product__table table-properties">
-              <tr class="table-properties__row">
-                <td class="table-properties__property">1 упаковка (100г)</td>
-                <td class="table-properties__value">200 Р.</td>
-              </tr>
-            </table>
-          </div>
-          <a class="extra-product__button button" href="#">Заказать</a>
-        </section>
-      </div>
+      <div class="page-main__wrapper">
+        <h2 class="extra-products__title">Дополнительные товары</h2>
+        <div class="extra-products__inner">
+          <div>
+            <div class="page-main__extra-product">
+              <section class="extra-product extra-product--display-flex">
+                <div class="extra-product__wrapper">
+                  <div class="extra-product__content">
+                    <h3 class="extra-product__title">Сахарозаменитель</h3>
+                    <table class="extra-product__table table-properties">
+                      <tr class="table-properties__row">
+                        <td class="table-properties__property">1 упаковка (100г)</td>
+                        <td class="table-properties__value">200 Р.</td>
+                      </tr>
+                    </table>
+                  </div>
+                  <a class="extra-product__button button" href="#">Заказать</a>
+                </div>
+              </section>
+            </div>
 
-      <div class="page-main__extra-product">
-        <section class="extra-product">
-          <div class="extra-product__content">
-            <h3 class="extra-product__title">Питьевая вода</h3>
-            <table class="extra-product__table table-properties">
-              <tr class="table-properties__row">
-                <td class="table-properties__property">5 литров</td>
-                <td class="table-properties__value">50 Р.</td>
-              </tr>
-            </table>
-          </div>
-          <a class="extra-product__button button" href="#">Заказать</a>
-        </section>
-      </div>
+            <div class="page-main__extra-product">
+              <section class="extra-product">
+                <div class="extra-product__wrapper">
+                  <div class="extra-product__content">
+                    <h3 class="extra-product__title">Питьевая вода</h3>
+                    <table class="extra-product__table table-properties">
+                      <tr class="table-properties__row">
+                        <td class="table-properties__property">5 литров</td>
+                        <td class="table-properties__value">50 Р.</td>
+                      </tr>
+                    </table>
+                  </div>
+                  <a class="extra-product__button button" href="#">Заказать</a>
+                </div>
+              </section>
+            </div>
 
-      <div class="page-main__extra-product">
-        <section class="extra-products__item extra-product">
-          <div class="extra-product__content">
-            <h3 class="extra-product__title">Молоко</h3>
-            <table class="extra-product__table table-properties">
-              <tr class="table-properties__row">
-                <td class="table-properties__property">1 литр</td>
-                <td class="table-properties__value">100 Р.</td>
-              </tr>
-            </table>
-          </div>
-          <a class="extra-product__button button" href="#">Заказать</a>
-        </section>
-      </div>
+            <div class="page-main__extra-product">
+              <section class="extra-products__item extra-product">
+                <div class="extra-product__wrapper">
+                  <div class="extra-product__content">
+                    <h3 class="extra-product__title">Молоко</h3>
+                    <table class="extra-product__table table-properties">
+                      <tr class="table-properties__row">
+                        <td class="table-properties__property">1 литр</td>
+                        <td class="table-properties__value">100 Р.</td>
+                      </tr>
+                    </table>
+                  </div>
+                  <a class="extra-product__button button" href="#">Заказать</a>
+                </div>
+              </section>
+            </div>
 
-      <div class="page-main__extra-product">
-        <section class="extra-products__item extra-product">
-          <div class="extra-product__content">
-            <h3 class="extra-product__title">Витамины</h3>
-            <table class="extra-product__table table-properties">
-              <tr class="table-properties__row">
-                <td class="table-properties__property">1 упаковка (30 г)</td>
-                <td class="table-properties__value">300 Р.</td>
-              </tr>
-            </table>
+            <div class="page-main__extra-product">
+              <section class="extra-products__item extra-product">
+                <div class="extra-product__wrapper">
+                  <div class="extra-product__content">
+                    <h3 class="extra-product__title">Витамины</h3>
+                    <table class="extra-product__table table-properties">
+                      <tr class="table-properties__row">
+                        <td class="table-properties__property">1 упаковка (30 г)</td>
+                        <td class="table-properties__value">300 Р.</td>
+                      </tr>
+                    </table>
+                  </div>
+                  <a class="extra-product__button button" href="#">Заказать</a>
+                </div>
+              </section>
+            </div>
           </div>
-          <a class="extra-product__button button" href="#">Заказать</a>
-        </section>
-      </div>
 
-      <div class="page-main__extra-product extra-products__item extra-bonus">
-        <div class="extra-bonus__wrapper">
-          <p class="extra-bonus__content">Закажите все</p>
-          <p class="extra-bonus__content">и получите чехол для кота в подарок!</p>
+          <div class="page-main__extra-product extra-products__item extra-bonus">
+            <div class="extra-bonus__wrapper">
+              <p class="extra-bonus__content">Закажите все</p>
+              <p class="extra-bonus__content">и получите чехол для кота в подарок!</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <section class="page-main__contacts contacts">
-    <h2 class="contacts__title visually-hidden">Контакты</h2>
-    <div class="page-main__wrapper">
-      <div class="contacts__wrapper">
-        <p class="contacts__slogan">приглашаем к сотрудничеству дилеров!</p>
-        <p class="contacts__content">ул. Большая Конюшенная, д. 19/8  Санкт-Петербург</p>
+    <section class="page-main__contacts contacts contacts--bg-gray">
+      <h2 class="contacts__title visually-hidden">Контакты</h2>
+      <div class="page-main__wrapper">
+        <div class="contacts__wrapper">
+          <p class="contacts__slogan">приглашаем к сотрудничеству дилеров!</p>
+          <p class="contacts__content">ул. Большая Конюшенная, д. 19/8  Санкт-Петербург</p>
+        </div>
       </div>
-    </div>
-    <iframe class="contacts__map" src="https://yandex.ru/map-widget/v1/-/CCuL4L9i" width="1345" height="645"></iframe>
-  </section>
-</main>
+      <iframe class="contacts__map" src="https://yandex.ru/map-widget/v1/-/CCuL4L9i" width="1345" height="645"></iframe>
+    </section>
+  </main>
 
-<footer class="page-footer site-grid__wrapper">
-  <div class="page-footer__inner">
-    <a class="page-footer__site-title-link" href="#">
-      <img class="page-footer__site-title" src="img/logo-footer.svg" width="128" height="24" alt="Магазин Cat energy">
-    </a>
-    <div class="page-footer__social social">
-      <a class="social__link" href="#" aria-label="Мы в Vkontakte">
-        <span class="social__icon">
-          <svg width="22" height="12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
+  <footer class="page-footer site-grid__wrapper">
+    <div class="page-footer__inner">
+      <a class="page-footer__site-title-link" href="#">
+        <img class="page-footer__site-title" src="img/logo-footer.svg" width="128" height="24" alt="Магазин Cat energy">
+      </a>
+      <div class="page-footer__social social">
+        <a class="social__link" href="#" aria-label="Мы в Vkontakte">
+          <span class="social__icon">
+            <svg width="22" height="12" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 22 12" style="enable-background:new 0 0 22 12;" xml:space="preserve">
+              <g>
+                <path
+                d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
+                c0,0.1,0,0.6-0.3,0.9c-0.3,0.3-0.8,0.4-0.9,0.4l-1.4,0c-0.7,0-3.2-0.2-5.4-2.3C2.5,7.1,0.2,2.2,0.1,2C0,1.6-0.1,1.2,0.2,0.9
+                c0.3-0.3,0.8-0.4,1-0.4l3,0l0.1,0c0.1,0,0.4,0.1,0.7,0.3c0.3,0.2,0.4,0.5,0.5,0.6c0,0,0.5,1.1,1.1,2c1,1.5,1.4,1.9,1.5,2
+                C8.2,5,8.3,4,8.2,3.1c0-0.4-0.1-0.8-0.2-1C7.9,2,7.7,1.9,7.5,1.9L6.9,1.4C6.9,0.9,7.4,0.5,7.8,0.3C8.3,0.1,9.1,0,10.1,0l0.5,0
+                c0.9,0,1.2,0.1,1.6,0.1c1.2,0.3,1.2,1.3,1.1,2.5c0,0.4,0,0.8,0,1.2c0,0.1,0,0.2,0,0.4c0,0.3,0,0.8,0.1,1c0.2-0.1,0.6-0.5,1.5-1.9
+                c0.6-0.9,1-1.9,1.1-2.1l0,0c0.1-0.3,0.4-0.7,1.2-0.7l3.1,0c0,0,0.1,0,0.3,0c0.7,0,1.2,0.2,1.3,0.7c0.2,0.5,0.1,1.3-1.7,3.5
+                c-0.3,0.3-0.5,0.6-0.7,0.9C19,6,18.6,6.6,18.6,6.7c0,0.1,0.5,0.5,0.9,0.9c1.1,0.9,1.9,1.7,2.2,2.3c0.4,0.6,0.3,1,0.2,1.3
+                c-0.3,0.7-1.2,0.7-1.4,0.8l-2.8,0C17.7,12,17.6,12,17.6,12z M13.7,8.3c0.7,0,1.2,0.6,1.8,1.2c0.4,0.4,0.7,0.8,1.1,1
+                c0.5,0.3,1,0.3,1,0.3l0.1,0l2.8,0c0.1,0,0.3-0.1,0.4-0.1c0,0,0-0.1-0.1-0.1c-0.3-0.5-1-1.3-2-2.1c-0.9-0.7-1.3-1.1-1.4-1.7
+                c0-0.6,0.4-1.1,1.2-2.1c0.2-0.2,0.4-0.5,0.7-0.8c1.1-1.4,1.4-2,1.5-2.3c-0.1,0-0.5,0-0.5,0l-3.2,0c-0.1,0-0.2,0-0.2,0
+                C16.9,2,16.4,3.1,15.8,4c-1.4,2.1-2,2.4-2.5,2.4c-0.1,0-0.3,0-0.4-0.1c-0.7-0.4-0.7-1.4-0.7-2.1c0-0.1,0-0.2,0-0.3
+                c0-0.5,0-0.9,0-1.3c0.1-1.3,0-1.3-0.3-1.4c-0.3-0.1-0.5-0.1-1.4-0.1l-0.5,0c-0.5,0-1,0-1.4,0.1c0.1,0.1,0.1,0.1,0.2,0.2
+                c0.4,0.5,0.4,1.5,0.4,1.7c0.1,1.3,0,2.9-0.7,3.3C8.4,6.4,8.3,6.5,8.1,6.5C7.5,6.5,6.8,5.8,5.6,4C5,2.9,4.5,1.8,4.5,1.8
+                c0,0,0-0.1-0.1-0.1c-0.1,0-0.2-0.1-0.2-0.1l-2.9,0c0,0,0,0-0.1,0c0.4,0.9,2.5,5,4.8,7.2c2,1.9,4.3,2,4.7,2l1.4,0c0,0,0.2,0,0.2-0.1
+                c0,0,0,0,0-0.1c0-0.2,0-2,1.2-2.3C13.5,8.3,13.6,8.3,13.7,8.3z"/>
+              </g>
+            </svg>
+          </span>
+        </a>
+        <a class="social__link" href="#" aria-label="Мы в Instagram">
+          <span class="social__icon">
+            <svg width="16" height="16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
+              <style type="text/css">
+                .st0 {
+                  fill: #231F20;
+                }
+              </style>
+              <path class="st0" d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1
+              L11.8,1 M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0L11.8,0z"/>
+              <path class="st0" d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1c0,1.7-1.4,3.1-3.1,3.1c-1.7,0-3.1-1.4-3.1-3.1C4.9,6.3,6.3,4.9,8,4.9 M8,3.9
+              C5.7,3.9,3.9,5.7,3.9,8s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9L8,3.9z"/>
+              <circle class="st0" cx="12.3" cy="3.7" r="0.9"/>
+            </svg>
+          </span>
+        </a>
+        <a class="social__link" href="#" aria-label="Мы в Facebook"><span class="social__icon">
+          <svg width="10" height="19" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
             <g>
               <path
-              d="M17.6,12c-0.3,0-0.9-0.1-1.5-0.5c-0.5-0.3-0.9-0.7-1.3-1.2c-0.3-0.3-0.9-0.9-1.1-0.9c-0.2,0.1-0.4,0.7-0.3,1.2
-              c0,0.1,0,0.6-0.3,0.9c-0.3,0.3-0.8,0.4-0.9,0.4l-1.4,0c-0.7,0-3.2-0.2-5.4-2.3C2.5,7.1,0.2,2.2,0.1,2C0,1.6-0.1,1.2,0.2,0.9
-              c0.3-0.3,0.8-0.4,1-0.4l3,0l0.1,0c0.1,0,0.4,0.1,0.7,0.3c0.3,0.2,0.4,0.5,0.5,0.6c0,0,0.5,1.1,1.1,2c1,1.5,1.4,1.9,1.5,2
-              C8.2,5,8.3,4,8.2,3.1c0-0.4-0.1-0.8-0.2-1C7.9,2,7.7,1.9,7.5,1.9L6.9,1.4C6.9,0.9,7.4,0.5,7.8,0.3C8.3,0.1,9.1,0,10.1,0l0.5,0
-              c0.9,0,1.2,0.1,1.6,0.1c1.2,0.3,1.2,1.3,1.1,2.5c0,0.4,0,0.8,0,1.2c0,0.1,0,0.2,0,0.4c0,0.3,0,0.8,0.1,1c0.2-0.1,0.6-0.5,1.5-1.9
-              c0.6-0.9,1-1.9,1.1-2.1l0,0c0.1-0.3,0.4-0.7,1.2-0.7l3.1,0c0,0,0.1,0,0.3,0c0.7,0,1.2,0.2,1.3,0.7c0.2,0.5,0.1,1.3-1.7,3.5
-              c-0.3,0.3-0.5,0.6-0.7,0.9C19,6,18.6,6.6,18.6,6.7c0,0.1,0.5,0.5,0.9,0.9c1.1,0.9,1.9,1.7,2.2,2.3c0.4,0.6,0.3,1,0.2,1.3
-              c-0.3,0.7-1.2,0.7-1.4,0.8l-2.8,0C17.7,12,17.6,12,17.6,12z M13.7,8.3c0.7,0,1.2,0.6,1.8,1.2c0.4,0.4,0.7,0.8,1.1,1
-              c0.5,0.3,1,0.3,1,0.3l0.1,0l2.8,0c0.1,0,0.3-0.1,0.4-0.1c0,0,0-0.1-0.1-0.1c-0.3-0.5-1-1.3-2-2.1c-0.9-0.7-1.3-1.1-1.4-1.7
-              c0-0.6,0.4-1.1,1.2-2.1c0.2-0.2,0.4-0.5,0.7-0.8c1.1-1.4,1.4-2,1.5-2.3c-0.1,0-0.5,0-0.5,0l-3.2,0c-0.1,0-0.2,0-0.2,0
-              C16.9,2,16.4,3.1,15.8,4c-1.4,2.1-2,2.4-2.5,2.4c-0.1,0-0.3,0-0.4-0.1c-0.7-0.4-0.7-1.4-0.7-2.1c0-0.1,0-0.2,0-0.3
-              c0-0.5,0-0.9,0-1.3c0.1-1.3,0-1.3-0.3-1.4c-0.3-0.1-0.5-0.1-1.4-0.1l-0.5,0c-0.5,0-1,0-1.4,0.1c0.1,0.1,0.1,0.1,0.2,0.2
-              c0.4,0.5,0.4,1.5,0.4,1.7c0.1,1.3,0,2.9-0.7,3.3C8.4,6.4,8.3,6.5,8.1,6.5C7.5,6.5,6.8,5.8,5.6,4C5,2.9,4.5,1.8,4.5,1.8
-              c0,0,0-0.1-0.1-0.1c-0.1,0-0.2-0.1-0.2-0.1l-2.9,0c0,0,0,0-0.1,0c0.4,0.9,2.5,5,4.8,7.2c2,1.9,4.3,2,4.7,2l1.4,0c0,0,0.2,0,0.2-0.1
-              c0,0,0,0,0-0.1c0-0.2,0-2,1.2-2.3C13.5,8.3,13.6,8.3,13.7,8.3z"/>
+              d="M7.1,19H2v-8.8H0V5.8h1.9c-0.1-2,0.2-3.4,1.1-4.4C3.8,0.5,5,0.1,6.5,0L10,0v4.2H7.2C7.1,4.4,7,5,7,5.8H10v4.4H7.1V19z
+              M3.1,18h2.8V9.1h2.9V6.8H5.9l0-0.5c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6
+              H1.1v2.3h2V18z"/>
             </g>
           </svg>
         </span>
       </a>
-      <a class="social__link" href="#" aria-label="Мы в Instagram">
-        <span class="social__icon">
-          <svg width="16" height="16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
-            <style type="text/css">
-              .st0 {
-                fill: #231F20;
-              }
-            </style>
-            <path class="st0" d="M11.8,1C13.6,1,15,2.4,15,4.2v7.7c0,1.7-1.4,3.1-3.1,3.1H4.2C2.4,15,1,13.6,1,11.8V4.2C1,2.4,2.4,1,4.2,1
-            L11.8,1 M11.8,0H4.2C1.9,0,0,1.9,0,4.2v7.7C0,14.1,1.9,16,4.2,16h7.7c2.3,0,4.2-1.9,4.2-4.2V4.2C16,1.9,14.1,0,11.8,0L11.8,0z"/>
-            <path class="st0" d="M8,4.9c1.7,0,3.1,1.4,3.1,3.1c0,1.7-1.4,3.1-3.1,3.1c-1.7,0-3.1-1.4-3.1-3.1C4.9,6.3,6.3,4.9,8,4.9 M8,3.9
-            C5.7,3.9,3.9,5.7,3.9,8s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9L8,3.9z"/>
-            <circle class="st0" cx="12.3" cy="3.7" r="0.9"/>
-          </svg>
-        </span>
-      </a>
-      <a class="social__link" href="#" aria-label="Мы в Facebook"><span class="social__icon">
-        <svg width="10" height="19" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 10 19" style="enable-background:new 0 0 10 19;" xml:space="preserve">
-          <g>
-            <path
-            d="M7.1,19H2v-8.8H0V5.8h1.9c-0.1-2,0.2-3.4,1.1-4.4C3.8,0.5,5,0.1,6.5,0L10,0v4.2H7.2C7.1,4.4,7,5,7,5.8H10v4.4H7.1V19z
-            M3.1,18h2.8V9.1h2.9V6.8H5.9l0-0.5c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6
-            H1.1v2.3h2V18z"/>
-          </g>
+    </div>
+    <div class="page-footer__copyright copyright">
+      <a class="copyright__company" href="#">HTML Academy</a>
+      <a class="copyright__logo" href="#" aria-label="Ссылка на сайт htmlacademy.ru">
+        <svg width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="10 10 40 40">
+          <path fill="#666666" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
         </svg>
-      </span>
-    </a>
+      </a>
+    </div>
   </div>
-  <div class="page-footer__copyright copyright">
-    <a class="copyright__company" href="#">HTML Academy</a>
-    <a class="copyright__logo" href="#" aria-label="Ссылка на сайт htmlacademy.ru">
-      <svg width="27" height="34" xmlns="http://www.w3.org/2000/svg" viewBox="10 10 40 40">
-        <path fill="#666666" d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
-      </svg>
-    </a>
-  </div>
-</div>
 </footer>
 </body>
 </html>
